<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/s107gbackground"
    tools:context="pena.antoino.s107gcontrols.syma.MiniHelicopter_Controls">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Yaw"
        android:id="@+id/tvYaw"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        />

    <SeekBar
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sbYaw"
        android:layout_below="@+id/tvYaw"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:progressDrawable="@android:color/transparent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Pitch"
        android:id="@+id/tvPitch"
        android:layout_below="@+id/sbYaw"
        android:layout_centerHorizontal="true" />

    <SeekBar
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sbPitch"
        android:layout_below="@+id/tvBack"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:progressDrawable="@android:color/transparent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Throttle"
        android:id="@+id/tvThrottle"
        android:layout_below="@+id/sbPitch"
        android:layout_centerHorizontal="true" />

    <SeekBar
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sbThrottle"
        android:layout_below="@+id/tvThrottle"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/sbPitch"
        android:indeterminate="false"
        android:progressDrawable="@android:color/transparent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Left"
        android:id="@+id/tvLeft"
        android:layout_above="@+id/sbYaw"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Right"
        android:id="@+id/tvRight"
        android:layout_above="@+id/sbYaw"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Back"
        android:id="@+id/tvBack"
        android:layout_alignBottom="@+id/tvPitch"
        android:layout_alignEnd="@+id/sbYaw" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Forward"
        android:id="@+id/tvForward"
        android:layout_above="@+id/sbPitch"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Trim"
        android:id="@+id/tvTrim"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/sbThrottle"
        android:layout_alignEnd="@+id/tvPitch" />

    <SeekBar
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sbTrim"
        android:layout_below="@+id/tvTrim"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/sbThrottle"
        android:progressDrawable="@android:color/transparent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Version"
        android:id="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />



</RelativeLayout>
